force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Info</fullName>
            </value>
            <value>
                <fullName>Candidate Assigned</fullName>
            </value>
            <value>
                <fullName>Candidate Based in another Location</fullName>
            </value>
            <value>
                <fullName>Candidate Research</fullName>
            </value>
            <value>
                <fullName>Client Check - Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Competiror/Supplier Relationship</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Currently based at our client</fullName>
            </value>
            <value>
                <fullName>Declined by Candidate(Before interview)</fullName>
            </value>
            <value>
                <fullName>Declined by Entelect</fullName>
            </value>
            <value>
                <fullName>Declined by Entelect (By Council at offer stage)</fullName>
            </value>
            <value>
                <fullName>Do not contact</fullName>
            </value>
            <value>
                <fullName>Dont Revisit - Poor Profile</fullName>
            </value>
            <value>
                <fullName>Draft Offer</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Lost Lead</fullName>
            </value>
            <value>
                <fullName>No current Requirements</fullName>
            </value>
            <value>
                <fullName>No response from Candidate after contact</fullName>
            </value>
            <value>
                <fullName>Offer accepted</fullName>
            </value>
            <value>
                <fullName>Offer accepted - Start date pending</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Hold - Graduate Interview</fullName>
            </value>
            <value>
                <fullName>Please decline</fullName>
            </value>
            <value>
                <fullName>Please make an offer</fullName>
            </value>
            <value>
                <fullName>Please setup Interview</fullName>
            </value>
            <value>
                <fullName>Please setup screening call</fullName>
            </value>
            <value>
                <fullName>Pre-screen</fullName>
            </value>
            <value>
                <fullName>Profile no longer relevant (dont revisit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>