force-app/main/default/objects/Candidate__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Candidate’s role and responsibilities within their team.</description>
    <label>Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>