force-app/main/default/objects/Candidate__c/fields/Team_Setup__c.field-meta.xml
<CustomField>
    <fullName>Team_Setup__c</fullName>
    <description>Overview of current team structure and size.</description>
    <label>Team Setup</label>
    <type>TextArea</type>
</CustomField>