force-app/main/default/objects/Candidate__c/fields/Technical_Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Technical_Interview_Feedback__c</fullName>
    <label>Technical Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>