force-app/main/default/objects/Candidate__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <description>Is the Candidate exploring new opportunities now or in the future, as indicated by them when applying and filling out the application form on Culture site</description>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I&apos;m ready to apply now</fullName>
            </value>
            <value>
                <fullName>I&apos;m not ready but keen to explore my options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>