force-app/main/default/objects/Candidate__c/fields/Total_Cost_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_to_Company__c</fullName>
    <label>Total Cost to Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>