force-app/main/default/objects/Candidate__c/fields/Ways_of_Working__c.field-meta.xml
<CustomField>
    <fullName>Ways_of_Working__c</fullName>
    <description>Description of current work style and methodologies.</description>
    <label>Ways of Working</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>