force-app/main/default/objects/Candidate__c/fields/Work_History_Projects__c.field-meta.xml
<CustomField>
    <fullName>Work_History_Projects__c</fullName>
    <description>Summary of candidate’s past roles and notable projects.</description>
    <label>Work History &amp; Projects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>