force-app/main/default/objects/Candidate__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 2 Years</fullName>
            </value>
            <value>
                <fullName>3 - 4 Year</fullName>
            </value>
            <value>
                <fullName>5 - 7 Years</fullName>
            </value>
            <value>
                <fullName>8+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>