force-app/main/default/objects/Candidate__c/validationRules/Potential_Jedi_No_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Potential_Jedi_No_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;Potential Jedi&quot;),
    NOT(ISCHANGED(Stage__c)),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>You cannot edit a Candidate while in &apos;Potential Jedi&apos; Stage</errorMessage>
</ValidationRule>