force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CV_Number__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Overview__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>