force-app/main/default/objects/Candidate__c/listViews/Last_Contact_MAde.listView-meta.xml
<ListView>
    <fullName>Last_Contact_MAde</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Days_since_last_contact__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Days_since_last_contact__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Last Contact MAde</label>
</ListView>