force-app/main/default/objects/Candidate__c/listViews/To_Contact.listView-meta.xml
<ListView>
    <fullName>To_Contact</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>To Contact</label>
</ListView>